finalized edits for this chapter after testing

--- a/doc-Deploying_OpenShift_Enterprise_with_Red_Hat_CloudForms/Preparing_VM_For_OpenShift.adoc
+++ b/doc-Deploying_OpenShift_Enterprise_with_Red_Hat_CloudForms/Preparing_VM_For_OpenShift.adoc
@@ -8,7 +8,7 @@ To host OpenShift Enterprise, virtual machines require the following:
 
 * Red Hat Enterprise Linux 6.4 or higher
 
-* Network access, with valid IP addresses and access to the OpenShift Enterprise sources, for example through Red Hat Subscription Manager or Red Hat Satellite
+* Network access, with valid IP addresses and access to the OpenShift Enterprise sources, for example, through Red Hat Subscription Manager or Red Hat Satellite
 
 * SSH key access from all appliances running the Automation Role to the virtual machines
 
@@ -18,17 +18,17 @@ To host OpenShift Enterprise, virtual machines require the following:
 You can use your preferred source, for example PXE, ISO, or Clone, when creating the virtual machine as long as the requirements are met for OpenShift Enterprise installation.
 
 * DNS is an important element of the environment, as machines must be able to connect bi-directionally to any resource in the network using the hostname.
-That means that new virtual machines instantiated from the template need to register to your DNS system automatically.
+This means that new virtual machines instantiated from the template need to register to your DNS system automatically.
 
 Use the following procedures to prepare a template virtual machine to host OpenShift Enterprise.
 
 === Creating a Virtual Machine in Red Hat Enterprise Virtualization
 
-Create and configure a new Red Hat Enterprise Linux virtual machine on Red Hat Enterprise Virtualization with the following steps.
+Create a new Red Hat Enterprise Linux virtual machine on Red Hat Enterprise Virtualization with the following steps.
 
 [NOTE]
 ======
-For more information on installing virtual machines on Red Hat Enterprise Virtualization, see the https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Virtualization/3.5/html-single/Administration_Guide/index.html#chap-Virtual_Machines[Red Hat Enterprise Virtualization Installation Guide].⁠
+For more information on installing virtual machines on Red Hat Enterprise Virtualization, see the https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Virtualization/3.5/html-single/Administration_Guide/index.html#chap-Virtual_Machines[Red Hat Enterprise Virtualization Administration Guide].⁠
 ======
 
 ==== Creating a New Virtual Machine
