applying edits suggested by @dayle

--- a/doc-Deployment_Planning_Guide/Capacity.adoc
+++ b/doc-Deployment_Planning_Guide/Capacity.adoc
@@ -34,8 +34,8 @@ creation of capacity and utilization.
 
 === Assigning the Capacity and Utilization Server Roles
 
-. Navigate to *Configure → Configuration*, and select the server to configure from *Settings → Zone* in the left pane of the Appliance.
-. Navigate to the *Server → Server Control* area, and select the appropriate Capacity & Utilization roles from the list based on your configuration.
+. Navigate to menu:Configure[Configuration], and select the server to configure from menu:Settings[Zone] in the left pane of the Appliance.
+. Navigate to the menu:Server[Server Control] area, and select the appropriate Capacity & Utilization roles from the list based on your configuration.
 . Click *Save*.
 
 Data collection begins immediately. However, the first collection begins
@@ -129,7 +129,7 @@ service postgresql reload
 
 After creating the new user, add the user's credentials to the settings for the provider.
 
-. From *Infrastructure → Providers*, select an infrastructure provider to update its settings.
+. From menu:Infrastructure[Providers], select an infrastructure provider to update its settings.
 . Click image:1847.png[]*Configuration*, and then image:1851.png[]*Edit Selected Infrastructure Provider*.
 . In the *Credentials* area, click *C & U Database*.
 . Type in the credentials for the new database user you created.
@@ -382,7 +382,7 @@ details, or report view.
 
 This procedure shows you how to view utilization trend summary.
 
-. Navigate to *Optimize → Utilization*.
+. Navigate to menu:Optimize[Utilization].
 . Click *Summary* if it is not already selected.
 . Expand the tree on the left side, until you can see the desired
   providers, clusters, or datastores.
@@ -404,7 +404,7 @@ This procedure shows you how to view utilization trend summary.
 
 This procedure shows you how to view detail lines of a utilization trend.
 
-. Navigate to *Optimize → Utilization*.
+. Navigate to menu:Optimize[Utilization].
 . Expand the tree on the left side, until you can see the desired
   providers, clusters, or datastores.
 . Click on the item.
@@ -417,7 +417,7 @@ This procedure shows you how to view detail lines of a utilization trend.
 To find out more about resource utilization, view utilization trend
 reports.
 
-. Navigate to *Optimize → Utilization*.
+. Navigate to menu:Optimize[Utilization].
 . Expand the tree on the left side, until you can see the desired
   providers, clusters, or datastores.
 . Click on the item.
@@ -437,7 +437,7 @@ clusters you can place a new virtual machine.
 Use the CloudForms Management Engine planning feature to help you plan
 for a virtual machine placement.
 
-. Navigate to *Optimize → Planning*.
+. Navigate to menu:Optimize[Planning].
 . From *Reference VM Selection*, use the dropdowns to select the virtual
   machine that is most like the one that you want to add.
 +
@@ -489,13 +489,22 @@ report which can be downloaded for further analysis.
 
 ==== Prerequisites
 
-* Bottleneck reports use the same mechanism to gather data as Capacity and Utilization reports. To enable data collection in CloudForms Management Engine, see the following sections.
+* Bottleneck reports use the same mechanism to gather data as Capacity and Utilization reports. To enable data collection in CloudForms Management Engine, see the following sections:
 ** link:https://access.redhat.com/documentation/en/red-hat-cloudforms/version-4.0/deployment-planning-guide/#assigning_the_capacity_and_utilization_server_roles[Assigning the Capacity and Utilization Server Roles]
 ** link:https://access.redhat.com/documentation/en/red-hat-cloudforms/version-4.0/deployment-planning-guide/#data_collected[Data Collected]
-* Additionally, navigate to menu:Config[Configuration]. Select *Region* in the left pane of the Appliance. Under the *C & U Collection* tab, check the boxes for "Collect for All Clusters"/"Collect for All Datastores" or check the clusters/datastores you desire.
-* For bottleneck reports to work as expected, the data collection for Capacity and Utilization reports should also be enabled for the relevant backend provider. See the following documentation to enable data collection for RHEV and OpenStack provider. 
-** For RHEV: https://access.redhat.com/documentation/en/red-hat-cloudforms/version-4.0/deployment-planning-guide/#data_collection_for_red_hat_enterprise_virtualization_3_3_and_3_4
-** For OpenStack: https://access.redhat.com/documentation/en/red-hat-cloudforms/version-4.0/deployment-planning-guide/#data_collection_for_red_hat_enterprise_linux_openstack_platform
+* Additionally, configure your CloudForms Management Engine for collecting capacity and utilization reports for clusters and datastores by following this procedure:
+** Navigate to menu:Configure[Configuration]. 
+** Select *Region* from the *Settings* tab in the left pane of the appliance. 
+** In the right pane, under the *C & U Collection* tab, check the boxes for *Collect for All Clusters* under *Clusters* and *Collect for All Datastores* under *Datastores*, or select and check the boxes for the clusters/datastores you desire.
++
+[NOTE]
+======
+*Collect for All Clusters* must be checked to be able to collect capacity and utilization data from cloud providers such as Red Hat OpenStack or Amazon EC2.
+======
++
+* For bottleneck reports to work as expected, the data collection for Capacity and Utilization reports should also be enabled for the relevant backend provider. See the following documentation to enable data collection for Red Hat Enterprise Virtualization and Red Hat OpenStack provider:
+** For Red Hat Enterprise Virtualization: link:https://access.redhat.com/documentation/en/red-hat-cloudforms/version-4.0/deployment-planning-guide/#data_collection_for_red_hat_enterprise_virtualization_3_3_and_3_4[Data Collection for Red Hat Enterprise Virtualization 3.3 and 3.4]
+** For OpenStack: link:https://access.redhat.com/documentation/en/red-hat-cloudforms/version-4.0/deployment-planning-guide/#data_collection_for_red_hat_enterprise_linux_openstack_platform[Data Collection for Red Hat Enterprise Linux OpenStack Platform]
 
 [NOTE]
 ======
@@ -507,11 +516,12 @@ including them would skew trend lines. Therefore, at least one full day
 of hourly data from midnight to midnight is necessary for displaying the
 bottleneck charts under the *Optimize* tab.
 ======
+
 ==== Viewing the Bottleneck Summary
 To find out more about bottleneck capacity or utilization, view a
 bottleneck summary.
 
-. Navigate to *Optimize → Bottlenecks*.
+. Navigate to menu:Optimize[Bottlenecks].
 . Click *Summary* if it is not already selected.
 . Expand the tree on the left side, until you can see the desired
   providers, clusters, or datastores.
@@ -529,7 +539,7 @@ the timeline to see specific information on the bottleneck.
 
 ==== Viewing a Report of the Bottlenecks Trend
 
-. Navigate to *Optimize → Bottlenecks*.
+. Navigate to menu:Optimize[Bottlenecks].
 . Click *Report*.
 . Expand the tree on the left side, until you can see the desired
   providers, clusters, or datastores.
