--- a/doc-Deployment_Planning_Guide/Capacity.adoc
+++ b/doc-Deployment_Planning_Guide/Capacity.adoc
@@ -493,9 +493,9 @@ report which can be downloaded for further analysis.
 ** link:https://access.redhat.com/documentation/en/red-hat-cloudforms/version-4.0/deployment-planning-guide/#assigning_the_capacity_and_utilization_server_roles[Assigning the Capacity and Utilization Server Roles]
 ** link:https://access.redhat.com/documentation/en/red-hat-cloudforms/version-4.0/deployment-planning-guide/#data_collected[Data Collected]
 * Additionally, configure your CloudForms Management Engine for collecting capacity and utilization reports for clusters and datastores by following this procedure:
-** Navigate to menu:Configure[Configuration]. 
-** Select *Region* from the *Settings* tab in the left pane of the appliance. 
-** In the right pane, under the *C & U Collection* tab, check the boxes for *Collect for All Clusters* under *Clusters* and *Collect for All Datastores* under *Datastores*, or select and check the boxes for the clusters/datastores you desire.
+.. Navigate to menu:Configure[Configuration]. 
+.. Select *Region* from the *Settings* tab in the left pane of the appliance. 
+.. In the right pane, under the *C & U Collection* tab, check the boxes for *Collect for All Clusters* under *Clusters* and *Collect for All Datastores* under *Datastores*, or check the boxes for the clusters/datastores you desire.
 +
 [NOTE]
 ======
