added step in a procedure under Prerequisites.

--- a/doc-Deployment_Planning_Guide/Capacity.adoc
+++ b/doc-Deployment_Planning_Guide/Capacity.adoc
@@ -496,6 +496,7 @@ report which can be downloaded for further analysis.
 .. Navigate to menu:Configure[Configuration]. 
 .. Select *Region* from the *Settings* tab in the left pane of the appliance. 
 .. In the right pane, under the *C & U Collection* tab, check the boxes for *Collect for All Clusters* under *Clusters* and *Collect for All Datastores* under *Datastores*, or check the boxes for the clusters/datastores you desire.
+.. Click *Save*.
 +
 [NOTE]
 ======
