expanded OpenStack to Red Hat Enterprise Linux OpenStack Platform

--- a/doc-Deployment_Planning_Guide/Capacity.adoc
+++ b/doc-Deployment_Planning_Guide/Capacity.adoc
@@ -503,9 +503,9 @@ report which can be downloaded for further analysis.
 ======
 +
 .. Click *Save*.
-* For bottleneck reports to work as expected, the data collection for Capacity and Utilization reports should also be enabled for the relevant backend provider. See the following documentation to enable data collection for Red Hat Enterprise Virtualization and Red Hat OpenStack provider:
+* For bottleneck reports to work as expected, the data collection for Capacity and Utilization reports should also be enabled for the relevant backend provider. See the following documentation to enable data collection for Red Hat Enterprise Virtualization and Red Hat Enterprise Linux OpenStack Platform provider:
 ** For Red Hat Enterprise Virtualization: link:https://access.redhat.com/documentation/en/red-hat-cloudforms/version-4.0/deployment-planning-guide/#data_collection_for_red_hat_enterprise_virtualization_3_3_and_3_4[Data Collection for Red Hat Enterprise Virtualization 3.3 and 3.4]
-** For OpenStack: link:https://access.redhat.com/documentation/en/red-hat-cloudforms/version-4.0/deployment-planning-guide/#data_collection_for_red_hat_enterprise_linux_openstack_platform[Data Collection for Red Hat Enterprise Linux OpenStack Platform]
+** For Red Hat Enterprise Linux OpenStack Platform: link:https://access.redhat.com/documentation/en/red-hat-cloudforms/version-4.0/deployment-planning-guide/#data_collection_for_red_hat_enterprise_linux_openstack_platform[Data Collection for Red Hat Enterprise Linux OpenStack Platform]
 
 [NOTE]
 ======
