Few minor edits as part of QA review

--- a/doc-Deploying_OpenShift_Enterprise_with_Red_Hat_CloudForms/Preparing_VM_For_OpenShift.adoc
+++ b/doc-Deploying_OpenShift_Enterprise_with_Red_Hat_CloudForms/Preparing_VM_For_OpenShift.adoc
@@ -34,7 +34,7 @@ For more information on installing virtual machines on Red Hat Enterprise Virtua
 ==== Creating a New Virtual Machine
 
 . Click the *Virtual Machines* tab in Red Hat Enterprise Virtualization Manager.
-. Click the *New VM* button to open the *New Virtual Machine* window:
+. Click *New VM* to open the *New Virtual Machine* window:
 image:7316.png[]
 . Enter a *Name* for the virtual machine.
 . Select a Linux variant from the *Operating System* drop-down list. OpenShift Enterprise requires Red Hat Enterprise Linux 6.4 or higher.
@@ -82,7 +82,7 @@ The new disk appears in the details pane of the virtual machine after a short ti
 Install Red Hat Enterprise Linux 6.4 or higher from an ISO as a basic server on the new virtual machine.
 
 . Click the *Virtual Machines* tab and select a virtual machine with a status of `Down`.
-. Click the run (image:5033.png[]) button. Alternatively, right-click the virtual machine and select *Run*. The virtual machine status changes to `Up`, and the operating system installation begins.
+. Click run (image:5033.png[]). Alternatively, right-click the virtual machine and select *Run*. The virtual machine status changes to `Up`, and the operating system installation begins.
 . Open a `Remote Viewer` console to the virtual machine if one does not open automatically.
 * If `Remote Viewer` is not already installed, install the `virt-viewer` package with the following command, then restart your web browser:
 +
@@ -91,14 +91,14 @@ Install Red Hat Enterprise Linux 6.4 or higher from an ISO as a basic server on 
 ------
 +
 . Click the *Virtual Machines* tab and select a virtual machine.
-. Click the console button or right-click the virtual machine and select *Console*.
+. Click console or right-click the virtual machine and select *Console*.
 
 * If the connection protocol is set to SPICE, a console window will automatically open for the virtual machine.
 * If the connection protocol is set to VNC, a `console.vv` file will be downloaded. Click on the file and a console window will automatically open for the virtual machine.
 
 . Follow the prompts in the Red Hat Enterprise Linux installer to install the virtual machine's operating system.
 
-For more information on installing Red Hat Enterprise Linux 6, see the link:https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Linux/6/html/Installation_Guide/index.html[Red Hat Enterprise Linux Installation Guide].
+For more information on installing Red Hat Enterprise Linux 6, see the link: https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Linux/6/html/Installation_Guide/index.html[Red Hat Enterprise Linux Installation Guide].
 
 
 === Registering and Configuring the Virtual Machine
@@ -161,7 +161,7 @@ Password:
 ------
 +
 
-. Then, un-register the virtual machine so that the resulting image does not contain the same subscription details for every instance cloned based on it.
+. Then, unregister the virtual machine so that the resulting image does not contain the same subscription details for every instance cloned based on it.
 +
 ------
 # subscription-manager repos --disable=*
@@ -187,7 +187,7 @@ Before you create a template, you must seal the source virtual machine to ensure
 ==== Sealing a Linux Virtual Machine for Deployment as a Template
 
 . Log in to the virtual machine.
-. Flag the system for re-configuration by running the following command as root:
+. Flag the system for reconfiguration by running the following command as root:
 +
 ------
 # touch /.unconfigured
