--- a/doc-Deploying_OpenShift_Enterprise_with_Red_Hat_CloudForms/Preparing_VM_For_OpenShift.adoc
+++ b/doc-Deploying_OpenShift_Enterprise_with_Red_Hat_CloudForms/Preparing_VM_For_OpenShift.adoc
@@ -98,7 +98,7 @@ Install Red Hat Enterprise Linux 6.4 or higher from an ISO as a basic server on 
 
 . Follow the prompts in the Red Hat Enterprise Linux installer to install the virtual machine's operating system.
 
-For more information on installing Red Hat Enterprise Linux 6, see the link: https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Linux/6/html/Installation_Guide/index.html[Red Hat Enterprise Linux Installation Guide].
+For more information on installing Red Hat Enterprise Linux 6, see the: https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Linux/6/html/Installation_Guide/index.html[Red Hat Enterprise Linux Installation Guide].
 
 
 === Registering and Configuring the Virtual Machine
