--- a/doc-Deploying_OpenShift_Enterprise_with_Red_Hat_CloudForms/Preparing_VM_For_OpenShift.adoc
+++ b/doc-Deploying_OpenShift_Enterprise_with_Red_Hat_CloudForms/Preparing_VM_For_OpenShift.adoc
@@ -181,7 +181,7 @@ Then you can create a template from the existing virtual machine to use as a blu
 
 [IMPORTANT]
 ======
-Before you create a template, you must seal the source virtual machine to ensure all system-specific details are removed from the virtual machine. This is necessary to prevent the same details from appearing on multiple virtual machines created based on the same template. For more information, see the: https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Virtualization/3.5/html/Administration_Guide/sect-Sealing_Virtual_Machines_in_Preparation_for_Deployment_as_Templates.html[Red Hat Enterprise Virtualization Administration Guide].
+Before you create a template, you must seal the source virtual machine to ensure all system-specific details are removed from the virtual machine. This is necessary to prevent the same details from appearing on multiple virtual machines created based on the same template. For more information, see the https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Virtualization/3.5/html/Administration_Guide/sect-Sealing_Virtual_Machines_in_Preparation_for_Deployment_as_Templates.html[Red Hat Enterprise Virtualization Administration Guide].
 ======
 
 ==== Sealing a Linux Virtual Machine for Deployment as a Template
