Updated CFME VMware Virtual Appliance to CFME Openstack  Virtual Appliance for BZ#1299639

--- a/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/Installing_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/Installing_CloudForms.adoc
@@ -14,7 +14,7 @@ After installing the CloudForms Management Engine Appliance, you must configure 
 . Click *Downloads* in the menu bar.
 . Click *A-Z* to sort the product downloads alphabetically.
 . Click *Red Hat CloudForms* and then *Download Latest* to access the product download page.
-. From the list of installers and images, select the *CFME VMware Virtual Appliance* download link.
+. From the list of installers and images, select the *CFME OpenStack Virtual Appliance* download link.
 
 === Uploading the Appliance on OpenStack
 
