--- a/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/Installing_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/Installing_CloudForms.adoc
@@ -13,8 +13,8 @@ After installing the CloudForms Management Engine Appliance, you must configure 
 . Go to link:https://access.redhat.com[access.redhat.com] and log in to the Red Hat Customer Portal using your customer account details.
 . Click *Downloads* in the menu bar.
 . Click *A-Z* to sort the product downloads alphabetically.
-. Click *Red Hat CloudForms* and then *Download Latest* to access the product download page.
-. From the list of installers and images, select the *CFME OpenStack Virtual Appliance* download link.
+. Click *Red Hat CloudForms* to access the product download page. Alternatively, click the gear icon to the right and *Download Latest* to access the product download page.
+. From the list of installers and images under *Product Software*, select *CFME OpenStack Virtual Appliance* and click *Download Now*.
 
 === Uploading the Appliance on OpenStack
 
