BZ#1301560-Drafting content to add more explanation to VM status.

--- a/doc-Managing_Infrastructure_and_Inventory/Virtual_Machines.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/Virtual_Machines.adoc
@@ -74,7 +74,7 @@ image:images/2139.png[]
 
 |
 
-								Retired: Virtual Machine has been retired
+								Retired: When a virtual machine or instance is no longer required, it can be retired. Once a virtual machine or instance reaches its retirement date, it is immediately shut down and not allowed to restart. If an attempt to restart is made, CloudForms Management Engine will shut down the virtual machine or instance. 
 
 
 
@@ -89,7 +89,7 @@ image:images/2140.png[]
 
 |
 
-								Archived: Virtual Machine has no Host or Datastore associated with it.
+								Archived: Virtual Machine has no Host or Datastore associated with it. Archiving is done to move virtual machines to a low cost storage, either on demand or during retirement, if requested, to avoid incurring extra cost on a virtualized infrastructure due to Virtual Machine sprawl.
 
 
 
@@ -104,7 +104,7 @@ image:images/2141.png[]
 
 |
 
-								Orphaned: Virtual Machine has no Host but does have a Datastore associated with it.
+								Orphaned: Virtual Machine has no Host but does have a Datastore associated with it. Orphaned virtual machines are those that have been removed from their providers but due to a connection error or process failure, still appear in the provider's storage, when CloudForms Management Engine runs a SmartState analysis on the provider.
 
 
 
