BZ#1301560 - Added more explanation to vm status

--- a/doc-Managing_Infrastructure_and_Inventory/Virtual_Machines.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/Virtual_Machines.adoc
@@ -89,7 +89,7 @@ image:images/2140.png[]
 
 |
 
-								Archived: Virtual Machine has no Host or Datastore associated with it. Archiving is done to move virtual machines to a low cost storage, either on demand or during retirement, if requested, to avoid incurring extra cost on a virtualized infrastructure due to Virtual Machine sprawl.
+								Archived: An archived virtual machine has no host or datastore associated with it. Archiving is done to move virtual machines to a low cost storage, either on demand or during retirement, if requested, to avoid incurring extra cost on a virtualized infrastructure due to virtual machine sprawl.
 
 
 
@@ -104,7 +104,7 @@ image:images/2141.png[]
 
 |
 
-								Orphaned: Virtual Machine has no Host but does have a Datastore associated with it. Orphaned virtual machines are those that have been removed from their providers but due to a connection error or process failure, still appear in the provider's storage, when CloudForms Management Engine runs a SmartState analysis on the provider.
+								Orphaned: An orphaned virtual machine has no host but has a datastore associated with it. Orphaned virtual machines are those that have been removed from their providers but due to a connection error or process failure, still appear in the provider's storage during a CloudForms Management Engine SmartState analysis on the provider.
 
 
 
@@ -119,7 +119,7 @@ image:images/2142.png[]
 
 |
 
-								Disconnected: Virtual Machine is disconnected.
+								Disconnected: A disconnected virtual machine is one that has lost connection to either the provider's storage, host, or both. A disconnect is usually a result of network issues on the provider side. For instance, if during virtual machine provisioning the storage is not set up or deleted, the virtual machine will still exist on the provider, but will not run on the host as it has lost connection to its provider's storage.  
 
 
 
