added names of watermark reports to release note; waiting for SME review on email thread

--- a/doc-Release_Notes/enhancements.adoc
+++ b/doc-Release_Notes/enhancements.adoc
@@ -110,4 +110,4 @@ In the previous version of CloudForms Management Engine, the Automate Server Rol
 
 Watermark reports::
 
-CloudForms Management Engine can now report a high watermark for the maximum number of virtual machines on a provider over a one-month period, which can be used for billing. Reports can be queued to collect watermark information for host sockets per provider and for virtual machines per provider. These reports are located in the *Reports* menu under menu:Configuration Management[Providers].
+CloudForms Management Engine can now report a high watermark for the maximum number of virtual machines on a provider over a one-month period, which can be used for billing. Reports can be queued to collect watermark information for host sockets per provider and for virtual machines per provider. The *Watermark Host Sockets per Provider* and *Watermark VMs per Provider* reports are located in the *Reports* menu under menu:Configuration Management[Providers].
